Update sponsors to remove DirecTV

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -5,18 +5,30 @@ title: "Sponsors"
 Sponsors
 ========
 
-<table>
+<table class="table" width="100">
   <tr>
     <td>
       <a href="//www.gatorade.com">
-        <%= image_tag 'sponsors-gatorade.gif', class: 'img-responsive' %>
+        <%= image_tag "sponsors-gatorade.gif", class: "img-responsive" %>
       </a>
     </td>
-    <td>
+    <td valign="middle">
       <a href="//www.nike.com/us/en_us/">
         <%= image_tag 'sponsors-nike.png', class: 'img-responsive' %>
       </a>
     </td>
+    <td>
+      <a href="//www.riddell.com/">
+        <%= image_tag 'sponsors-riddell.jpg', class: 'img-responsive' %>
+      </a>
+    </td>
+  </tr>
+</table>
+
+* * *
+
+<table>
+  <tr>
     <td>
       <a href="//www.alignmed.com/">
         <%= image_tag 'sponsors-alignmed.png', class: 'img-responsive' %>
@@ -27,8 +39,6 @@ Sponsors
         <%= image_tag 'sponsors-spalding.gif', class: 'img-responsive' %>
       </a>
     </td>
-  </tr>
-  <tr>
     <td>
       <a href="//www.mcdonalds.com/">
         <%= image_tag 'sponsors-mcdonalds.gif', class: 'img-responsive' %>
@@ -39,6 +49,8 @@ Sponsors
         <%= image_tag 'sponsors-d1.gif', class: 'img-responsive' %>
       </a>
     </td>
+  </tr>
+  <tr>
     <td>
       <a href="//www.iberiabank.com/">
         <%= image_tag 'sponsors-iberia.png', class: 'img-responsive' %>
@@ -47,13 +59,6 @@ Sponsors
     <td>
       <a href="//www1.hilton.com/en_US/hi/hotel/MSYAHHH/index.do">
         <%= image_tag 'sponsors-hilton.jpg', class: 'img-responsive' %>
-      </a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href="//directv.com/">
-        <%= image_tag 'sponsors-directv.png', class: 'img-responsive' %>
       </a>
     </td>
     <td>
@@ -66,11 +71,11 @@ Sponsors
         <%= image_tag 'sponsors-papajohns.jpg', class: 'img-responsive' %>
       </a>
     </td>
+  </tr>
+  <tr>
     <td>
       <%= image_tag 'sponsors-sportsmedicine.jpg', class: 'img-responsive' %>
     </td>
-  </tr>
-  <tr>
     <td>
       <a href="//graduatehotels.com/">
         <%= image_tag 'sponsors-graduatehotels.png', class: 'img-responsive' %>
@@ -81,11 +86,6 @@ Sponsors
     </td>
     <td>
       <%= image_tag 'sponsors-si-play.png', class: 'img-responsive' %>
-    </td>
-    <td>
-      <a href="//www.riddell.com/">
-        <%= image_tag 'sponsors-riddell.jpg', class: 'img-responsive' %>
-      </a>
     </td>
   </tr>
 </table>
