--- a/source/page/medical-information.html.md.erb
+++ b/source/page/medical-information.html.md.erb
@@ -20,4 +20,12 @@ of all of our campers. The university’s state-of-the-art training
 facilities are available to treat all minor injuries and illnesses.
 Local hospitals can treat any emergency.
 
+<%= image_tag 'sponsors-sportsmedicine.jpg', class: 'img-responsive img-thumbnail' %>
+
+Thibodaux Regional Medical Center is the official hospital and sports medicine
+provider of the Manning Passing Academy. Certified athletic trainers are present
+at all on-field events, and are on 24-hour call for the duration of camp to
+manage medical issues. In the event of a medical emergency, Thibodaux Regional’s
+close proximity to the camp allows for quick response and expedited treatment.
+
 <%= image_tag 'medical-information.jpg', class: 'img-responsive img-thumbnail' %>
