--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,15 +20,15 @@ title: "Official Home Page"
         </div>
 
         <div class="item">
-          <% link_to online_registration_link do %>
-            <%= image_tag 'carousel-registration-open.png', alt: 'Registration is now open!' %>
-          <% end %>
+          <%= image_tag "carousel-registration-closed.png", alt: "Registration is closed" %>
         </div>
 
         <!--
 
         <div class="item">
-          <%= image_tag "carousel-registration-closed.png", alt: "Registratin is closed" %>
+          <% link_to online_registration_link do %>
+            <%= image_tag 'carousel-registration-open.png', alt: 'Registration is now open!' %>
+          <% end %>
         </div>
 
         <div class="item">
@@ -68,14 +68,18 @@ title: "Official Home Page"
     <h2>
       <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h2>
+    <h3>Registration for the 2017 MPA is now closed</h3>
+
     <!--
+
     <div class="bg-danger">
       <h3 class="text-muted">Registration for the 2017 MPA will open in October.</h3>
     </div>
-    <h3>Registration for the 2017 MPA is now closed</h3>
-    -->
+
     <%= link_to 'Sign Up Now!', online_registration_link,
       class: 'btn btn-lg btn-danger' %>
+
+    -->
   </div>
 </div>
 
