--- a/source/page/airport-shuttle.html.md.erb
+++ b/source/page/airport-shuttle.html.md.erb
@@ -8,9 +8,16 @@ Shuttle / Transportation
 Air Travel
 ----------
 
+* <strike>Sign up for a Shuttle online</strike>
+* <strike>Printable shuttle form</strike>
+
+<!--
+
 * [Sign Up for a Shuttle Online](<%= online_shuttle_link %>)
   *$5 non-refundable online registration fee applies*
 * [Printable Shuttle Form](/documents/shuttle.pdf)
+
+-->
 
 We typically have campers from all 50 states, Canada and Mexico. The
 closest airport is [New Orleans International](http://www.flymsy.com/)
@@ -34,13 +41,13 @@ Other than this shuttle service there is no other transportation
 provided (due to insurance issues). You may want to pursue information
 at:
 
-[Amtrack](http://www.amtrak.com/)  
+[Amtrack](http://www.amtrak.com/)
 *(800) 872-7245*
 
-[Greyhound Bus Company](http://www.greyhound.com/)  
+[Greyhound Bus Company](http://www.greyhound.com/)
 *(800) 229-9424*
 
-[New Orleans Aiport](http://www.flymsy.com/)  
+[New Orleans Aiport](http://www.flymsy.com/)
 *(504) 464-2661*
 
 <%= image_tag 'airport-shuttle.jpg', class: 'img-responsive img-thumbnail' %>
