Add Mixpanel tracking

--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -20,3 +20,4 @@ Registration for the 2017 MPA is now closed
   * [Camper Confirmation](<%= confirmation_link %>)
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
+<script type="text/javascript">mixpanel.track("Registration visit");</script>
