Prep for 2018 registration

--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -5,19 +5,19 @@ title: "Application Registration"
 Registration / Application
 ==========================
 
-<!--
-Registration for the 2017 MPA will open October 1
+Registration for the 2018 MPA will open October 1
 -------------------------------------------------
--->
 
+<!--
 Registration for the 2017 MPA is now closed
 -------------------------------------------
 
-  <!-- * [Online Registration](<%= online_registration_link %>) -->
-  <!-- * [Printable Application](/documents/application.pdf) -->
+  * [Online Registration](<%= online_registration_link %>)
+  * [Printable Application](/documents/application.pdf)
   * <strike>Online Registration</strike>
   * <strike>Printable Application</strike>
   * [Camper Confirmation](<%= confirmation_link %>)
+-->
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
 <script type="text/javascript">mixpanel.track("Registration visit");</script>
