Add Drip JS snippet

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,5 +48,19 @@ mixpanel.init("edc478515ad82bcbb921fc7f667e08a1");</script><!-- end Mixpanel -->
 
       _st('install','RABS6wvzVTLStYosDUeR');
     </script>
+    <!-- Drip -->
+    <script type="text/javascript">
+      var _dcq = _dcq || [];
+      var _dcs = _dcs || {};
+      _dcs.account = '7868796';
+
+      (function() {
+        var dc = document.createElement('script');
+        dc.type = 'text/javascript'; dc.async = true;
+        dc.src = '//tag.getdrip.com/7868796.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(dc, s);
+      })();
+    </script>
   </body>
 </html>
