Add color vars for future re-design

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,4 +1,10 @@
 @charset "utf-8";
+/*
+  Giants official colors
+*/
+$giantsRed: #A6192E;
+$giantsBlue: #001E62;
+$giantsGray: #A2AAAD;
 
 body {
   font-family: "museo-sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
