Changes per Hawk for 2018 site update

--- a/source/page/equipment.html.md.erb
+++ b/source/page/equipment.html.md.erb
@@ -21,9 +21,7 @@ T-shirt.
 
 Due to the generosity of our [sponsors](/page/sponsors), MPA campers will
 receive multiple gifts including T-Shirts, caps, a water bottle, a gym bag, a
-key lanyard, a commemorative DVD at the conclusion of camp\* and much, much
-more!  
-\**After camper returns dorm key. A $50 value!*
+key lanyard and much, much more!  
 
 Those campers who register online will also receive a [Spalding TF-SB1
 Football](http://spalding.com/football/index.php) when they arrive at
