Add link to contact Teevens regarding coaching

--- a/source/page/coaching-staff-emeritus.html.md.erb
+++ b/source/page/coaching-staff-emeritus.html.md.erb
@@ -28,6 +28,9 @@ LSU, Louisiana Tech, Mississippi State, Nicholls State, North Carolina
 State, Ole Miss, Oregon, Oregon State, South Carolina, Southern Miss,
 Stanford, Tennessee, Texas, Tulane, ULL and more.
 
+Requests to join the coaching staff should be directed to:
+<teevens@manningpassingacademy.com>
+
 *Due to the fact that there is so much movement in the football coaching
 profession, we cannot give a full list of the coaching staff until late
 June. Rest assured that, as always, they will all be of the highest quality
