Use shorthand autolink for email

--- a/source/page/contact-us.html.md.erb
+++ b/source/page/contact-us.html.md.erb
@@ -5,7 +5,7 @@ title: "Contact Us"
 Contact Information
 ===================
 
-**Email:** [info@manningpassingacademy.com](mailto:info@manningpassingacademy.com)  
+**Email:** <info@manningpassingacademy.com>
 *Your best way to contact us*
 
 **Voicemail:** (541) 636-9456
