Remove references to Spalding

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -35,9 +35,7 @@ Sponsors
       </a>
     </td>
     <td>
-      <a href="//www.spalding.com/">
-        <%= image_tag 'sponsors-spalding.gif', class: 'img-responsive' %>
-      </a>
+      &nbsp;
     </td>
     <td>
       <a href="//www.mcdonalds.com/">
