--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -55,11 +55,12 @@ considered the candidates post-season play.
 
 For almost four decades, the Manning family and the quarterback position have
 been practically synonymous with one another. As such, their summer vacations
-always revolve the annual Manning Passing Academy, a family-owned and managed
-football camp that embraces the basic fundamentals of football while catering to
-the offensive skill positions of RB, TE, WR…and of course QB. Archie and his
-wife Olivia (a former Homecoming Queen at Ole Miss) reside in New Orleans are
-the proud grandparents of seven grandchildren by Cooper, Peyton and Eli.
+always revolve around the annual Manning Passing Academy, a family-owned and
+managed football camp that embraces the basic fundamentals of football while
+catering to the offensive skill positions of RB, TE, WR…and of course QB. Archie
+and his wife Olivia (a former Homecoming Queen at Ole Miss) reside in
+Orleans are the proud grandparents of seven grandchildren by Cooper, Peyton and
+Eli.
 
 <div class="clearfix"></div> <hr />
 
@@ -198,8 +199,8 @@ first to throw at least 20 touchdown passes eight years in a row.
 Manning was named MVP of Super Bowl XLII (the year after Peyton was named MVP)
 joining Phil Simms and Otis Anderson as the only Giants who have won the award
 and the only Giants quarterback to win it twice. Manning played in his first Pro
-Bowl following the ‘08 season and h. Overall, his record as a starting QB is
-78-57 (.577) in the regular season and 8-3 (.727) in the postseason.
+Bowl following the ‘08 season. Overall, his record as a starting QB is 78-57
+(.577) in the regular season and 8-3 (.727) in the postseason.
 
 Manning's 151 consecutive starts is a Giants record and the third-best mark
 all-time by an NFL quarterback. It is the longest current streak in the league. 
@@ -274,7 +275,7 @@ Jeff "Hawk" Hawkins - Associate Director
 ----------------------------------------
 
 Hawk has been the Associate Camp Director since 1997. He is responsible for
-all aspects of administration. He is in his 16th season at the University of
+all aspects of administration. He is in his 17th season at the University of
 Oregon where he serves as the Senior Associate Athletic Director for Football
 Administration and the Director of the Hatfield-Dowlin Complex. Hawkins spent
 three years in the U.S. Army after high school. He earned his undergraduate
@@ -316,7 +317,7 @@ Tom Hart - Director of Camp Security
 Tom Hart oversees all aspects of the MPA's security both for coaches, as well as
 for campers. He is a retired police detective and SWAT Team Officer. Hart has
 accrued almost 27 years of law enforcement experience and has served as a
-Plice Academy Instructor, Anti-Terrorism Instructor, Crime Prevention Officer,
+Police Academy Instructor, Anti-Terrorism Instructor, Crime Prevention Officer,
 and Special Investigator to the Violent Crimes Unit. Tom graduated from
 Bridgewater State College (Bridgewater, MA) with a degree in physical
 education. He currently serves as the Professional Development Coordinator at
@@ -437,7 +438,7 @@ Parker Waters - Director of Photography
 ----------------------------------------
 
 Parker has been the official photographer for the MPA since 2009, capturing
-the exeperiences of campers and staff alike. He currently serves as the
+the experiences of campers and staff alike. He currently serves as the
 photographer for Tulane Athletics,the New Orleans Zephyrs (AAA affiliate of the
 Miami Marlins) and SportsNola.com. He regularly covers both NFL and NBA games,
 high school games for MaxPreps and has covered the Superbowl and National
