--- a/source/page/purpose.html.md.erb
+++ b/source/page/purpose.html.md.erb
@@ -13,7 +13,7 @@ knowledge and strategy of offensive play and defensive coverage.
 
 For almost four decades the Manning family and the quarterback position
 have been practically synonymous with one another. As such, their summer
-vacations always revolve the annual Manning Passing Academy...a
+vacations always revolve around the annual Manning Passing Academy...a
 family-owned and managed football camp that embraces the basic
 fundamentals of football while catering to the offensive skill positions
 of RB, TE, WR...and of course QB.
