Fix link to local accommodations

--- a/source/page/preparing-for-camp.html.md.erb
+++ b/source/page/preparing-for-camp.html.md.erb
@@ -27,7 +27,7 @@ Preparing for Camp
   to/from camp make sure you secure reservations early so you have a
   seat. Go to [airport shuttle](/page/airport-shuttle) in the web site.
 * If you are a DAY CAMPER (i.e. commuter) and you are looking for a
-  hotel in the camp area you should visit our [local accommodations](/local-accommodations)
+  hotel in the camp area you should visit our [local accommodations](/page/local-accommodations)
   link which will connect you with the Thibodaux Chamber of Commerce.
   Sorry we cannot coordinate housing for Day Campers.
 * If you are travelling on your own to Nicholls State and need
