Replace link test with Nicholls State

--- a/source/page/local-accommodations.html.md.erb
+++ b/source/page/local-accommodations.html.md.erb
@@ -9,9 +9,7 @@ Off-Campus Accommodations
 -------------------------
 
 There are ample accommodations in the local community that can be
-secured by visiting the
-[Bayou Region Accommodations](https://www.nicholls.edu/manning-passing-academy/)
-page.
+secured by visiting [Nicholls State](https://www.nicholls.edu/manning-passing-academy/).
 
 Sorry, but due to insurance issues, we are unable to provide on-campus
 housing to anyone other than the resident campers; and then only for the
