--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,6 +16,12 @@ title: "Official Home Page"
 
         <div class="item active">
           <% link_to online_registration_link do %>
+            <%= image_tag 'carousel-wilson-football.png', alt: 'Free Wilson Football' %>
+          <% end %>
+        </div>
+
+        <div class="item">
+          <% link_to online_registration_link do %>
             <%= image_tag 'carousel-registration-open.png', alt: 'Registration is now open!' %>
           <% end %>
         </div>
