Add Wilson to sponsor's page

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -7,7 +7,7 @@ Sponsors
 
 <table class="table" width="100">
   <tr>
-    <td>
+    <td valign="middle">
       <a href="//www.gatorade.com">
         <%= image_tag "sponsors-gatorade.gif", class: "img-responsive" %>
       </a>
@@ -17,7 +17,12 @@ Sponsors
         <%= image_tag 'sponsors-nike.png', class: 'img-responsive' %>
       </a>
     </td>
-    <td>
+    <td valign="middle">
+      <a href="//www.wilson.com/en-us/football/footballs">
+        <%= image_tag 'sponsors-wilson.png', class: 'img-responsive' %>
+      </a>
+    </td>
+    <td valign="middle">
       <a href="//www.riddell.com/">
         <%= image_tag 'sponsors-riddell.jpg', class: 'img-responsive' %>
       </a>
