Swap clinic and camp

--- a/source/page/womens-clinic.html.md.erb
+++ b/source/page/womens-clinic.html.md.erb
@@ -1,8 +1,8 @@
 ---
-title: "Inaugural Women's &amp; Girl's Camp &amp; Clinic"
+title: "Inaugural Women's &amp; Girl's Clinic &amp; Camp"
 ---
 
-Inaugural Women's &amp; Girl's Camp &amp; Clinic
+Inaugural Women's &amp; Girl's Clinic &amp; Camp
 ================================================
 
 <%= "#{womens_clinic_start_date.strftime('%A, %B %-d')} - #{womens_clinic_end_date.strftime('%A, %B %-d, %Y')}" %>
