--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -76,7 +76,7 @@ title: "Official Home Page"
 
     <hr />
 
-    <h3>2018 Inaugural Women's &amp; Girl's Camp &amp; Clinic</h3>
+    <h3>2018 Inaugural Women's &amp; Girl's Clinic &amp; Camp</h3>
     <h4>
       <%= "#{womens_clinic_start_date.strftime('%A, %B %-d')} - #{womens_clinic_end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h4>
