Add Nicholas Air to sponsors

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -40,7 +40,9 @@ Sponsors
       </a>
     </td>
     <td>
-      &nbsp;
+      <a href="//www.nicholasair.com/">
+        <%= image_tag "sponsors-nicholas-air.png", class: "img-responsive" %>
+      </a>
     </td>
     <td>
       <a href="//www.mcdonalds.com/">
