Remove Papa Johns from sponsor's page

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -72,9 +72,7 @@ Sponsors
       </a>
     </td>
     <td>
-      <a href="//papajohns.com/">
-        <%= image_tag 'sponsors-papajohns.jpg', class: 'img-responsive' %>
-      </a>
+      &nbsp;
     </td>
   </tr>
   <tr>
