Update to 23rd anniversary

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -87,7 +87,7 @@ title: "Official Home Page"
 <div id="home-description" class="container">
   <div class="row">
     <div class="col-md-4">
-      <h4>22nd Anniversary</h4>
+      <h4>23rd Anniversary</h4>
       <%= image_tag 'home-description-cooper-archie.png' %>
       <p>
         For over 20 years, the Manning Passing Academy has been helping players
