Update womens page with links and documents

--- a/source/page/womens-clinic.html.md.erb
+++ b/source/page/womens-clinic.html.md.erb
@@ -8,5 +8,20 @@ Inaugural Women's &amp; Girl's Clinic &amp; Camp
 <%= "#{womens_clinic_start_date.strftime('%A, %B %-d')} - #{womens_clinic_end_date.strftime('%A, %B %-d, %Y')}" %>
 -----------------------------------------------------
 
+Purpose
+-------
+
 _More information coming soon..._
 
+Registration
+------------
+
+  * [Online Registration](<%= womens_clinic_online_registration_link %>)
+  * [Printable Application](/documents/womens-application.pdf)
+  * [Confirmation Page](<%= womens_clinic_confirmation_link %>)
+
+Printable Schedules
+-------------------
+
+  * [June 25 Clinic](/documents/womens-clinic-schedule.pdf)
+  * [June 26 Interactive Camp](/documents/womens-camp-schedule.pdf)
