--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -33,7 +33,7 @@ title: "Official Home Page"
         </div>
 
         <div class="item">
-          <% link_to '/page/online-store/' do %>
+          <% link_to '//store.manningpassingacademy.com' do %>
             <%= image_tag 'carousel-online-store.png', alt: 'Online Store now open.' %>
           <% end %>
         </div>
