Add link to camp photos

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,24 @@ title: "Official Home Page"
       <div class="carousel-inner">
 
         <div class="item active">
+          <% link_to "https://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=10265372&__s=XXXXXXXX" do %>
+            <%= image_tag "carousel-photos.png", alt: "Camp Photos" %>
+          <% end %>
+        </div>
+
+        <div class="item">
+          <% link_to '//store.manningpassingacademy.com' do %>
+            <%= image_tag 'carousel-online-store.png', alt: 'Online Store now open.' %>
+          <% end %>
+        </div>
+
+        <!--
+
+        <div class="item">
+          <%= image_tag "carousel-registration-closed.png", alt: "Registration is closed" %>
+        </div>
+
+        <div class="item">
           <% link_to "https://s3.amazonaws.com/manning-passing-academy/2018PocketBook.pdf" do %>
             <%= image_tag 'carousel-reminders.png', alt: 'Pre-Camp Reminders' %>
           <% end %>
@@ -30,24 +48,6 @@ title: "Official Home Page"
           <% link_to online_registration_link do %>
             <%= image_tag 'carousel-registration-open.png', alt: 'Registration is now open!' %>
           <% end %>
-        </div>
-
-        <div class="item">
-          <% link_to "https://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=10070071" do %>
-            <%= image_tag 'carousel-photos.png', alt: 'MPA Photos' %>
-          <% end %>
-        </div>
-
-        <div class="item">
-          <% link_to '//store.manningpassingacademy.com' do %>
-            <%= image_tag 'carousel-online-store.png', alt: 'Online Store now open.' %>
-          <% end %>
-        </div>
-
-        <!--
-
-        <div class="item">
-          <%= image_tag "carousel-registration-closed.png", alt: "Registration is closed" %>
         </div>
 
         -->
