--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -67,6 +67,8 @@ title: "Official Home Page"
   <div class="container">
     <h1>MANNING PASSING ACADEMY</h1>
     <h2>Nicholls State University - Thibodaux, LA</h2>
+
+    <!--
     <h2>
       <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h2>
@@ -81,14 +83,12 @@ title: "Official Home Page"
       <%= "#{womens_clinic_start_date.strftime('%A, %B %-d')} - #{womens_clinic_end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h4>
     <a href="/page/womens-clinic" class="btn btn-default">Learn More</a>
-
-    <!--
+    -->
 
     <div class="bg-danger">
-      <h3 class="text-muted">Registration for the 2018 MPA will open in October.</h3>
+      <h3 class="text-muted">Registration for the 2019 MPA will open soon.</h3>
     </div>
 
-    -->
   </div>
 </div>
 
