Update dates for 2019

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -68,11 +68,11 @@ title: "Official Home Page"
     <h1>MANNING PASSING ACADEMY</h1>
     <h2>Nicholls State University - Thibodaux, LA</h2>
 
-    <!--
     <h2>
       <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h2>
 
+    <!--
     <%= link_to 'Sign Up Now!', online_registration_link,
       class: 'btn btn-lg btn-danger' %>
 
@@ -95,7 +95,7 @@ title: "Official Home Page"
 <div id="home-description" class="container">
   <div class="row">
     <div class="col-md-4">
-      <h4>23rd Anniversary</h4>
+      <h4>24th Anniversary</h4>
       <%= image_tag 'home-description-cooper-archie.png' %>
       <p>
         For over 20 years, the Manning Passing Academy has been helping players
