--- a/source/page/tuition.html.md.erb
+++ b/source/page/tuition.html.md.erb
@@ -5,8 +5,8 @@ title: "Tuition"
 Tuition
 =======
 
-Registration for the 2018 Camp is Now Open
-------------------------------------------
+Registration for the 2019 Camp will open soon
+---------------------------------------------
 
 * **Overnight camper:** <%= number_to_currency overnight_tuition %> per camper
 * **Day camper:** <%= number_to_currency day_tuition %> per camper
