Add info about team rates

--- a/source/page/tuition.html.md.erb
+++ b/source/page/tuition.html.md.erb
@@ -17,6 +17,18 @@ Please review our [Refund Policy](/page/refund-policy).
 
 ---
 
+## Teams
+
+We do _not_ offer group rates we **do have team rates** for established junior
+high and high school teams. Please contact us at
+<info@manningpassingacademy.com> to arrange for your team to attend.
+
+**Teams cannot register online.**
+
+---
+
+## Changing Status
+
 If you choose to change your status from an overnight camper to a day
 camper, or vice-versa, a $30.00 administrative fee will be added to your balance.
 
@@ -30,7 +42,5 @@ If a camper has paid <%= number_to_currency overnight_tuition %> to be an
 overnight camper, then decides to switch to a day camper, they would be
 charged the $30.00 administrative fee from the amount they've over paid,
 and therefore refunded a total of <%= number_to_currency(overnight_tuition - day_tuition - 30) %>
-
-Sorry, there are no team or group rates.
 
 <%= image_tag 'tuition.jpg', class: 'img-responsive img-thumbnail' %>
