Use flexbox to display sponsors

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -5,90 +5,79 @@ title: "Sponsors"
 Sponsors
 ========
 
-<table class="table" width="100">
-  <tr>
-    <td valign="middle">
-      <a href="//www.gatorade.com">
-        <%= image_tag "sponsors-gatorade.gif", class: "img-responsive" %>
-      </a>
-    </td>
-    <td valign="middle">
-      <a href="//www.nike.com/us/en_us/">
-        <%= image_tag 'sponsors-nike.png', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td valign="middle">
-      <a href="//www.wilson.com/en-us/football/footballs">
-        <%= image_tag 'sponsors-wilson.png', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td valign="middle">
-      <a href="//www.riddell.com/">
-        <%= image_tag 'sponsors-riddell.jpg', class: 'img-responsive' %>
-      </a>
-    </td>
-  </tr>
-</table>
+<div id="title-sponsors" class="sponsors">
+  <div class="sponsor">
+    <% link_to '//www.gatorade.com' do %>
+      <%= image_tag 'sponsors-gatorade.gif', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//www.nike.com/us/en_us' do %>
+      <%= image_tag 'sponsors-nike.png', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//www.wilson.com/en-us/football/footballs' do %>
+      <%= image_tag 'sponsors-wilson.png', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//www.riddell.com' do %>
+      <%= image_tag 'sponsors-riddell.jpg', class: 'img-responsive' %>
+    <% end %>
+  </div>
+</div>
 
 * * *
 
-<table>
-  <tr>
-    <td>
-      <a href="//www.alignmed.com/">
-        <%= image_tag 'sponsors-alignmed.png', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td>
-      <a href="//www.nicholasair.com/">
-        <%= image_tag "sponsors-nicholas-air.png", class: "img-responsive" %>
-      </a>
-    </td>
-    <td>
-      <a href="//www.mcdonalds.com/">
-        <%= image_tag 'sponsors-mcdonalds.gif', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td>
-      <a href="//d1sportstraining.com/">
-        <%= image_tag 'sponsors-d1.gif', class: 'img-responsive' %>
-      </a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <a href="//www.iberiabank.com/">
-        <%= image_tag 'sponsors-iberia.png', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td>
-      <a href="//www1.hilton.com/en_US/hi/hotel/MSYAHHH/index.do">
-        <%= image_tag 'sponsors-hilton.jpg', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td>
-      <a href="//sportsperformance.stvincent.org/">
-        <%= image_tag 'sponsors-stvincents.gif', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td>
-      &nbsp;
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <%= image_tag 'sponsors-sportsmedicine.jpg', class: 'img-responsive' %>
-    </td>
-    <td>
-      <a href="//graduatehotels.com/">
-        <%= image_tag 'sponsors-graduatehotels.png', class: 'img-responsive' %>
-      </a>
-    </td>
-    <td>
-      <%= image_tag 'sponsors-mannings.png', class: 'img-responsive' %>
-    </td>
-    <td>
-      <%= image_tag 'sponsors-si-play.png', class: 'img-responsive' %>
-    </td>
-  </tr>
-</table>
+<div id="secondary-sponsors" class="sponsors">
+  <div class="sponsor">
+    <% link_to '//www.alignmed.com' do %>
+      <%= image_tag 'sponsors-alignmed.png', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//wwww.nicholasair.com' do %>
+      <%= image_tag 'sponsors-nicholas-air.png', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//www.mcdonalds.com' do %>
+      <%= image_tag 'sponsors-mcdonalds.gif', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//d1sportstraining.com' do %>
+      <%= image_tag 'sponsors-d1.gif', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//www.iberiabank.com' do %>
+      <%= image_tag 'sponsors-iberia.png', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//www1.hilton.com/en_US/hi/hotel/MSYAHHH/index.do' do %>
+      <%= image_tag 'sponsors-hilton.jpg', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//sportsperformance.stvincent.org' do %>
+      <%= image_tag 'sponsors-stvincents.gif', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <%= image_tag 'sponsors-sportsmedicine.jpg', class: 'img-responsive' %>
+  </div>
+  <div class="sponsor">
+    <% link_to '//graduatehotels.com' do %>
+      <%= image_tag 'sponsors-graduatehotels.png', class: 'img-responsive' %>
+    <% end %>
+  </div>
+  <div class="sponsor">
+    <%= image_tag 'sponsors-mannings.png', class: 'img-responsive' %>
+  </div>
+  <div class="sponsor">
+    <%= image_tag 'sponsors-si-play.png', class: 'img-responsive' %>
+  </div>
+</div>
