Update years in history

--- a/source/page/history.html.md.erb
+++ b/source/page/history.html.md.erb
@@ -8,12 +8,12 @@ History
 The Manning Passing Academy is owned and operated by the first family of
 football: Archie, Cooper, Peyton and Eli Manning… and is always an
 integral part of their lives. As such, their summer vacations always
-revolve around the annual football camp which is celebrating its 22nd
+revolve around the annual football camp which is celebrating its 24th
 anniversary. The Mannings are always the first to arrive, and the last
 to leave. They eat and sleep on-campus along with the rest of the
 campers and staff.
 
-The MPA is looking forward to its 13th year at
+The MPA is looking forward to its 15th year at
 [Nicholls State University](https://www.nicholls.edu/manning-passing-academy/)
 in Thibodaux, Louisiana. Due to the university's vast layout and
 proximity of playing fields, it became a natural attraction for the MPA.
