Update Cooper's bio

--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -29,7 +29,7 @@ league MVP in `78 and was twice selected to the Pro Bowl.
 
 As a community leader, he has supported numerous non-profits and charities over
 the years in both Louisiana and Mississippi while continuing to assist those who
-share his love for the game of football.  In 2013 he became the eighth recipient
+share his love for the game of football. In 2013 he became the eighth recipient
 of the NFL's prestigious "Pat Summerall Award" given to an individual who has
 demonstrated through their career the character, integrity and leadership both
 on and off the field.
@@ -90,10 +90,22 @@ lend instruction or a helping hand. He is always the first to arrive at camp and
 the last to leave. He prides himself on his ability to entertain campers after
 practice as he hosts a live Q&A sessions with all the college players on staff.
 
-He is currently a partner at Howard Weil Inc., an energy investment boutique in
-New Orleans and is active with the National Multiple Sclerosis Society, The
-Academy of Sacred Heart and his alma mater Isidore Newman School. He and his
-wife Ellen are the proud parents of May, and two sons, Arch, and Heid.
+He is currently a Principal at AJ Capital Partners, a vertically-integrated real
+estate development and investment firm. As the Senior Managing Director, Cooper
+focuses on business development and investor relations. In 2014, A.J. Capital
+launched the Graduate Hotels brand, a hand-crafted collection of hotels in
+university-anchored markets across the country.
+
+There are currently 11 open and operating hotels across the country with an
+additional eight under development and slated to be open by 2020. During the
+NFL season, Cooper hosts “The Manning Hour (minus 58 minutes)” on Fox Sports NFL
+Sunday.
+
+He is active with the National Multiple Sclerosis Society, The Academy of Sacred
+Heart and his alma mater Isidore Newman School.
+
+A University of Mississippi graduate, he resides in New Orleans with his wife
+Ellen are the proud parents of May, and two sons, Arch and Heid.
 
 Cooper remains the most handsome Manning and has no plans of losing that title.
 
