Add clarifying text to Purpose

--- a/source/page/purpose.html.md.erb
+++ b/source/page/purpose.html.md.erb
@@ -5,6 +5,8 @@ title: "Purpose"
 Purpose
 =======
 
+**The MPA is not just for QBs**
+
 To create an environment of greater understanding of, and the
 proficiency with, the fundamentals, techniques, skills, motivation and
 sportsmanship necessary for success at the individual offensive skill
