Add sheet size info

--- a/source/page/preparing-for-camp.html.md.erb
+++ b/source/page/preparing-for-camp.html.md.erb
@@ -9,11 +9,12 @@ Preparing for Camp
   contact numbers, etc.) is correct on the
   [confirmation page](<%= confirmation_link %>)
   page so that you are grouped correctly during drills and 7 on 7.
-  * All balances must be paid in full by <%= balance_due_date %> or else you may
+* All balances must be paid in full by <%= balance_due_date %> or else you may
   incur a $100 late fee or be dropped from the rolls. No exceptions.
 * All overnight campers must provide their own bedding; sleeping bags
   are recommended. You must also provide your own towels, wash cloths,
   and any other toiletries you need. Go to [room and board](/page/room-and-board).
+  If you choose to bring sheets, bed sizes are Twin XL.
 * You do NOT need football equipment but we recommend a mouth piece
   for all campers. Grass-cleated shoes are highly recommended to
   tennis shoes but you should bring both in case of inclimate weather
