Reformat and add sheet size info

--- a/source/page/room-and-board.html.md.erb
+++ b/source/page/room-and-board.html.md.erb
@@ -8,25 +8,24 @@ Room and Board
 Housing
 -------
 
-All overnight campers will stay in one of Nicholls State University's
-fine residence halls. Bedding is NOT furnished. As such, overnight
-campers must provide their own bedding (sleeping bags are suggested).
-All rooms are air-conditioned and come with beds and mattresses.
-However, all campers will need to provide their own towels, wash cloths
-and any other toiletry articles (soap, shampoo, toothpaste, etc.) that
-they may need. The MPA reseves the right to make all [roommate assignments.](/page/roommates)
+All overnight campers will stay in one of Nicholls State University's fine
+residence halls. Bedding is NOT furnished. As such, overnight campers must
+provide their own bedding (sleeping bags are suggested). If you choose to bring
+sheets, bed sizes are Twin XL. All rooms are air-conditioned and come with beds
+and mattresses. However, all campers will need to provide their own towels,
+wash cloths and any other toiletry articles (soap, shampoo, toothpaste, etc.)
+that they may need. The MPA reseves the right to make all [roommate
+assignments.](/page/roommates)
 
-Although there are obviously no accommodations for commuter campers… a
-shower facility will be made available after each practice session.
-Towels and soap are the responsibility of the campers.
+Although there are obviously no accommodations for commuter campers… a shower
+facility will be made available after each practice session. Towels and soap
+are the responsibility of the campers.
 
-Dining
-------
+Dining ------
 
-Both Overnight campers and Day campers will eat at Nicholls State’s
-outstanding dining facility. Overnight campers receive three (3) meals a
-day (breakfast, lunch and dinner) and Day campers get two (2) meals a
-day (lunch and dinner).
+Both Overnight campers and Day campers will eat at Nicholls State’s outstanding
+dining facility. Overnight campers receive three (3) meals a day (breakfast,
+lunch and dinner) and Day campers get two (2) meals a day (lunch and dinner).
 
 See the [daily schedule](/page/daily-schedule) for specific times.
 
@@ -36,7 +35,7 @@ Day Campers from out of town - find information about
 McDonalds will be sponsoring a meal for all campers Thursday night after
 registration.
 
-Campers will be able to purchase snack foods and pizza during their free
-time in the evening.
+Campers will be able to purchase snack foods and pizza during their free time in
+the evening.
 
 <%= image_tag 'room-and-board.jpg', class: 'img-responsive img-thumbnail' %>
