Add more clarifying info on positions

--- a/source/page/areas-of-instruction.html.md.erb
+++ b/source/page/areas-of-instruction.html.md.erb
@@ -7,6 +7,8 @@ Areas of Instruction
 
 The MPA boasts a camper to coach ratio of better than 10:1
 
+All offensive skill positions are encouraged to attend: **QB, WR, RB, TE**
+
 * **Quarterbacks** - Stance, Exchange, Drops, Set-up, Sprint Out, Play
 Action, Screens, Ball Handling, Option, Reading Defenses, and Field
 Leadership.
