--- a/source/page/teams.html.md.erb
+++ b/source/page/teams.html.md.erb
@@ -2,14 +2,33 @@
 title: "Teams"
 ---
 
-Teams
-=====
+Teams & Group Rates
+===================
 
 We welcome and encourage coaches who want to bring the offensive skill
 players on their teams. You will have the opportunity to have your squad
 practice together during passing league competition in the evenings.
 
-Sorry, but there are no team discounts.
+The Manning Passing Academy is now offering an opportunity for high school teams
+to participate _as a team_ at the MPA at a reduced tuition rate based and
+calculated on the number of players who attend. The more players a high school
+team brings the less you pay. The Head Coach will also have the opportunity to
+oversee and coach his team’s 7 on 7 sessions and will be employed as a member of
+the MPA Staff as a position coach during individual periods.
+
+This is also a great opportunity for high school coaches to interact with their
+peers, network with college and professional coaches and players and learn the
+basic fundamental skills and techniques needed to coach their players to perform
+at the highest level at the offensive skill positions of WR, TE, RB and QB.
+
+In order to register as a “TEAM” the Head Football Coach or high school Athletic
+Director must communicate directly with the MPA Camp Office.
+
+**Online registration is not available for teams.**
+
+### Team Rates:
+
+<%= partial 'team_rates' %>
 
 *Note: Some campers would prefer to play at a higher grade-level than
 the one they are in. The MPA cannot assess the skill level of a player
