--- a/source/page/tuition.html.md.erb
+++ b/source/page/tuition.html.md.erb
@@ -23,7 +23,11 @@ We do _not_ offer group rates we **do have team rates** for established junior
 high and high school teams. Please contact us at
 <info@manningpassingacademy.com> to arrange for your team to attend.
 
-**Teams cannot register online.**
+**Online registration is not available for teams.**
+
+### Team Rates:
+
+<%= partial 'team_rates' %>
 
 ---
 
