Update title sponsors of Saturday events

--- a/source/page/media-only.html.md.erb
+++ b/source/page/media-only.html.md.erb
@@ -33,9 +33,8 @@ Saturday - 6:30 p.m. - Guidry Stadium - Manning Field Camp coaches and
 counselors, including selected campers, will run passing route drills.
 Photo Opportunity Only. No interviews with coaches, counselors or campers.
 
-* Iberia Bank Air-It-Out
-* Papa John's QB Challenge
-* QB Dead-Eye Contest
+* Riddell Air-It-Out
+* Nike QB Challenge
 
 ### Credential Information
 
